# data-zoo

./: .gitignore  Makefile  README.md  pyproject.toml
notebooks/: pandas.ipynb  polars.ipynb
scripts/: convert_sqlite_to_parquet.py
