[tool.poetry]
name = "data-zoo"
version = "0.1.0"
description = ""
authors = ["Jan <janvanbuel@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.3.0"
polars = {extras = ["pyarrow"], version = "^0.13.47"}
pandas = "^1.4.2"
duckdb = "^0.3.4"
connectorx = "^0.3.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
kaggle = "^1.5.12"
pre-commit = "^2.19.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
